[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cflp-qubo"
version = "0.1.0"
description = "Template D&Q."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tno.quantum.optimization.qubo[all]",
]

[project.optional-dependencies]
dev = [
    "tno-dev-utils[default]"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]